--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a class="btn ghost" href="#/about">О нас</a>
       </nav>
     </header>
-<p class="muted" style="margin-top:14px; text-align:center;">Приложение для расчета дозы облучения при фотодинамической терапии</p>
+<p class="muted" style="margin-top:14px; text-align:center;">Приложение для расчета времени облучения при фотодинамической терапии</p>
 
 
     <section id="page-home" class="grid home-grid">
@@ -93,29 +93,29 @@
             <div class="col-left">
               <div class="field" id="field-diam">
                 <label for="diam">Диаметр зоны облучения, мм</label>
-                <input type="number" id="diam" inputmode="decimal" min="0" step="0.1" placeholder="напр., 5">
+                <input type="number" id="diam" inputmode="decimal" min="0" step="0.1" placeholder="Например, 5">
               </div>
               <div class="field" id="field-len">
                 <label for="lenmm">Длина диффузора, мм</label>
-                <input type="number" id="lenmm" inputmode="decimal" min="0" step="0.1" placeholder="напр., 20">
+                <input type="number" id="lenmm" inputmode="decimal" min="0" step="0.1" placeholder="Например, 20">
               </div>
               <div class="field" id="field-diamcyl">
                 <label for="diamcyl">Диаметр поверхности облучения, мм</label>
-                <input type="number" id="diamcyl" inputmode="decimal" min="0" step="0.1" placeholder="напр., 1.0">
+                <input type="number" id="diamcyl" inputmode="decimal" min="0" step="0.1" placeholder="Например, 1.0">
               </div>
               <div class="field" id="field-dose">
                 <label for="dose">Плотность энергии, Дж/см²</label>
-                <input type="number" id="dose" inputmode="decimal" min="0" step="0.01" placeholder="напр., 100" required>
+                <input type="number" id="dose" inputmode="decimal" min="0" step="0.01" placeholder="Например, 100" required>
               </div>
             </div>
             <div class="col-right">
               <div class="field" id="field-trans">
                 <label for="trans">Пропускание волокна, %</label>
-                <input type="number" id="trans" inputmode="decimal" min="0" max="100" step="0.1" placeholder="напр., 80" required>
+                <input type="number" id="trans" inputmode="decimal" min="0" max="100" step="0.1" placeholder="Например, 80" required>
               </div>
               <div class="field" id="field-power">
                 <label for="power">Мощность лазера, мВт</label>
-                <input type="number" id="power" inputmode="decimal" min="0" step="1" placeholder="напр., 300" required>
+                <input type="number" id="power" inputmode="decimal" min="0" step="1" placeholder="Например , 300" required>
               </div>
             </div>
           </div>
@@ -144,7 +144,7 @@
     </section>
 
     <div class="muted" style="margin-top:20px; text-align:center">Поддерживается офлайн-режим и добавление на домашний экран (Android/iOS).</div>
-<footer>© <span id="year"></span> БИОСПЕК • Все права защищены<div class="muted" style="margin-top:4px">Designed by Dmitry Yakovlev</div></footer>
+<footer>© <span id="year"></span> БИОСПЕК • Все права защищены<div class="muted" style="margin-top:4px">Designed and developed by Dmitry Yakovlev</div></footer>
   </main>
 
   <script>
